--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - docker build -t tomotoyinbo/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true tomotoyinbo/docker-react npm run test
+  - docker run -e CI=true tomotoyinbo/react-test npm run test
 
 deploy:
   provider: script
