https related changes

--- a/k8s/certificate.yaml
+++ b/k8s/certificate.yaml
@@ -1,20 +1,20 @@
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
-  name: k8s-multi-com-tls
+  name: modewsoft-com-tls
 spec:
-  secretName: k8s-multi-com
+  secretName: modewsoft-com-tls
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
-  commonName: k8s-multi.com
+  commonName: modewsoft.com
   dnsNames:
-    - k8s-multi.com
-    - www.k8s-multi.com
+    - modewsoft.com
+    - www.modewsoft.com
   acme:
     config:
       - http01:
           ingressClass: nginx
         domains:
-          - k8s-multi.com
-          - www.k8s-multi.com
+          - modewsoft.com
+          - www.modewsoft.com
