--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -10,11 +10,11 @@ metadata:
 spec:
   tls:
     - hosts:
-        - k8s-multi.com
-        - www.k8s-multi.com
-      secretName: k8s-multi-com
+        - modewsoft.com
+        - www.modewsoft.com
+      secretName: modewsoft-com-tls
   rules:
-    - host: k8s-multi.com
+    - host: modewsoft.com
       http:
         paths:
           - path: /
@@ -25,7 +25,7 @@ spec:
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
-    - host: www.k8s-multi.com
+    - host: www.modewsoft.com
       http:
         paths:
           - path: /
